--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 .full-CV {
     display: flex;
-    max-width: 1100px;
+    width: 1100px;
     margin: auto;
    
     flex-direction: row;
