--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ color:#10201D;
   }
   footer {
       display: flex;
-      max-width: 1100px;
+      width: 1100px;
       margin: auto;
     padding: 15px;
     background-color: #85938D;
